# telegram-bot-jei2Ashi

./: README.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  logging.py  main.py
backend/app/api/: routes_health.py  routes_miniapp.py  routes_telegram.py
backend/app/bot/: commands.py  dispatcher.py  schemas.py  telegram_client.py
backend/app/db/: session.py
backend/app/models/: audit_log.py  chat.py  file_object.py  session.py  update_log.py  user.py
backend/app/repositories/: __init__.py  chats.py  files.py  sessions.py  update_logs.py  users.py
backend/app/services/: bot_service.py  file_service.py  miniapp_auth_service.py  user_service.py
backend/app/storage/: base.py  local.py
backend/app/tests/unit/: test_commands.py  test_health.py  test_miniapp_auth.py
deploy/: .env.example  docker-compose.yml
deploy/apache/: telegram-bot.conf
deploy/scripts/: register_webhook.sh
deploy/systemd/: telegram-bot.service
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  PRD.md  PROJECT_BRIEF.md  RUNBOOK.md  SECURITY_REQUIREMENTS.md  TESTING_REQUIREMENTS.md
frontend/: index.html  package.json  tsconfig.json
frontend/src/: main.ts
